[package]
name = "taschenrechner"
description = "Computer-Algebra-System including a REPL."
license = "GPL-3.0-only"
version = "0.2.2"
authors = ["m4dh0rs3 <schoeps.benedikt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The goal is to have none, besides std